@@ -22,6 +22,8 @@ mirt 0.3.1
 * wald() function added for testing linear constraints. Useful in multiple group situations
   for testing individual parameters rather than always estimating a new model
 
+* Methods that use the MHRM can now estimate the nominal, gpcm, mcm, and 4PL models
+
 * General bug fixes as usual that were spawned from all the added features 
 
 ----------------------------------------------------------------
